# cvUtilitiesApp

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoThread.cpp  videoThread.h
